--- a/manuscript/PriceAnalysis.bib
+++ b/manuscript/PriceAnalysis.bib
@@ -26,3 +26,22 @@ publisher={CreateSpace Independent Publishing Platform}
   year={2007},
   publisher={U.S. Department of Agriculture, National Agricultural Statistics Service}
 }
+
+@book{good2011yield,
+  title={USDA Corn and Soybean Acreage Estimates and Yield Forecasts: Dispelling Myths and Misunderstandings},
+  author={Good, Darrel and Irwin, Scott},
+  year={2011},
+  edition={Marketing and Outlook Briefs March MOBR 11-02},
+  publisher={Department of Agricultural and Consumer Economics, University of Illinois}
+}
+
+@article{unganai1998drought,
+  title={Drought monitoring and corn yield estimation in Southern Africa from AVHRR data},
+  author={Unganai, Leonard S and Kogan, Felix N},
+  journal={Remote Sensing of Environment},
+  volume={63},
+  number={3},
+  pages={219--232},
+  year={1998},
+  publisher={Elsevier}
+}
