--- a/manuscript/PriceAnalysis.bib
+++ b/manuscript/PriceAnalysis.bib
@@ -45,3 +45,12 @@ publisher={CreateSpace Independent Publishing Platform}
   year={1998},
   publisher={Elsevier}
 }
+
+@article{hocking1976biometrics,
+  title={A Biometrics invited paper. The analysis and selection of variables in linear regression},
+  author={Hocking, Ronald R},
+  journal={Biometrics},
+  pages={1--49},
+  year={1976},
+  publisher={JSTOR}
+}
