--- a/manuscript/Chapter6.Rmd
+++ b/manuscript/Chapter6.Rmd
@@ -95,7 +95,7 @@ chartSeries(CZ2015_chart, type = "candlesticks", theme = chartTheme("white"))
 
 Source: [Quandl.com](https://www.quandl.com/data/CME/CZ2015-Corn-Futures-December-2015-CZ2015) Figures created with the `quantmod` package in R.
 
-Microsoct Excel can produce finacial prices using with open, high, low, close, and volume data as well. 
+Microsoft Excel can produce financial prices using with open, high, low, close, and volume data as well. 
 
 > ## Steps to Produce Candlestick, Matchsticks, and other Financial Charts in Microsoft Excel
 > 1. Make sure the data is arranged with volume first, then open, high, low, and close prices
@@ -116,7 +116,7 @@ Unlike previous statistics classes you may have had, where clean data sets are g
 
 ## Data Cleaning
 
-Before using data for forecasting purposes, you must have a good understanding of how the data were collected and for what purpose. Errors during data recording can happen, and it is essential to catch them before you begin a forecasting excersize. Taking business decisions based on erroneous data will be a costly lesson. Since price forecasters rarely participate in the data collection process price data can be susceptible to errors. 
+Before using data for forecasting purposes, you must have a good understanding of how the data were collected and for what purpose. Errors during data recording can happen, and it is essential to catch them before you begin a forecasting exercise . Taking business decisions based on erroneous data will be a costly lesson. Since price forecasters rarely participate in the data collection process price data can be susceptible to errors. 
 
 The most useful technique to quickly spot data encoding errors is to plot the data. Its a pretty low-tech technique, but when there is an error, this can be the most efficient way to spot it. Table 4 below reproduces table 3, but with on encoding error. Can you spot it?
 
@@ -169,9 +169,9 @@ Now that you know approximately where to look, you can probably easily see in th
 
 ## Misinterpretation of Data
 
-Misinterpretation of data is probably more common than discovering actual errors in your dataset. Since most data is collected for administrative or journalistic reasons it may not match with economic concepts. Or its properties may not match what you would naturally expect it to if it were collected explicitely for the purpuse you are using it for. 
+Misinterpretation of data is probably more common than discovering actual errors in your data set. Since most data is collected for administrative or journalistic reasons it may not match with economic concepts. Or its properties may not match what you would naturally expect it to if it were collected explicitly for the purpose you are using it for. 
 
-The most prominiant example of this is the "Prices Received by Farmers" variable in the USDA Nass database. 
+The most prominent example of this is the "Prices Received by Farmers" variable in the USDA NASS database. 
 price received by farmers. The USDA website is quoted below to describe how the Prices Received by Farmers variable is computed. 
 
 > For the major grains, oilseeds, and pulse crops, NASS surveys a select panel of approximately 2,000 mills, elevators, and buyers monthly in the top producing states, asking about total quantity purchased and total dollars received. For the major livestock species, the Agricultural Marketing Service (AMS) collects prices daily, weekly, and monthly from packing plants and livestock auctions on number of head sold, total live weight, and total dollars paid. For other commodities, NASS conducts surveys and uses administrative data as needed.
@@ -179,24 +179,24 @@ price received by farmers. The USDA website is quoted below to describe how the 
 >Based on the data collected and the information received from AMS, NASS computes monthly average state and national prices that producers received including market year averages (MYA) for approximately 65 commodities. An additional 35 commodities are MYA only. NASS publishes the price estimates in the Agricultural Prices report on or near the last business day of each month. Data are also available through the NASS searchable database, QuickStats. 
 > Source: [USDA NASS](http://www.nass.usda.gov/Surveys/Guide_to_NASS_Surveys/Prices_Received_and_Prices_Received_Indexes/index.asp)
 
-So the Prices Received by Farmers variable one gets from USDA NASS QuickStats should be understood as an average across two dimensions. It is an average accross a wide geography, and it is averaged across the entire marketing year. This averaging smoothes out a lot of variation in the data. So it you were to interpret Prices Received by Farmers as being useful to understand the risk a typical farmer faces over the course of the marketing year, you would grossly underestimate the risk they face. 
+So the Prices Received by Farmers variable one gets from USDA NASS QuickStats should be understood as an average across two dimensions. It is an average across a wide geography, and it is averaged across the entire marketing year. This averaging smooths out a lot of variation in the data. So it you were to interpret Prices Received by Farmers as being useful to understand the risk a typical farmer faces over the course of the marketing year, you would grossly underestimate the risk they face. 
 
 
 # Graphics 
 
-Beyond detecting errors in your data, it is good practice to become familiar with the data you are analysing to the degree that when you conduct your forecasting execise you can subject your results to the sniff test. In other words, at first blush do your results seem plausible given your familiarity with the data you are working with. If you have become accustomed to the look and feel of your data graphically, you will be much more likely to detect problems or weaknesses in your own forecasting analysis. 
+Beyond detecting errors in your data, it is good practice to become familiar with the data you are analyzing to the degree that when you conduct your forecasting exercise you can subject your results to the sniff test. In other words, at first blush do your results seem plausible given your familiarity with the data you are working with. If you have become accustomed to the look and feel of your data graphically, you will be much more likely to detect problems or weaknesses in your own forecasting analysis. 
 
 # Univariate Graphical Techniques
 
 Univariate means one variable. The simplest univariate technique is a regular time plot like we saw above. As a matter of style it is usually better to generate time plots using lines rather than charts.
 
-Another technique is to plot the change in the variable or the percent change in the variable. This is of particular interest because it is much harder to forecast changes or percent changes in a varaible, than it is to forecast the level of a variable, but the changes and percent changes are much more useful in terms of making economic descisions based on the forecast. 
+Another technique is to plot the change in the variable or the percent change in the variable. This is of particular interest because it is much harder to forecast changes or percent changes in a variable, than it is to forecast the level of a variable, but the changes and percent changes are much more useful in terms of making economic decisions based on the forecast. 
 
 # Multivariate Graphical Techniques
 
 The most basic multivariate technique is to simply graph all the variables on one time plot to gauge how they move together visually. This works best if all  the variables tend to be of the same scale. If you want to compare two variables of greatly differing scales you have two options. You can use major-minor axes. Or, you could focus on percent changes. Transform both variables into percent changes and then graph them on the same scale. 
 
-The second common multivariate graphical technique is to produce an x-y scatter plot. In an x-y scatterplot time is either stripped away, or perhaps it was not there to begin with (if one is considering a cross-sectional data set).  The x-y scatterplot focuses on how one variable changes as another changes, regardless of time. 
+The second common multivariate graphical technique is to produce an x-y scatter plot. In an x-y scatter-plot time is either stripped away, or perhaps it was not there to begin with (if one is considering a cross-sectional data set).  The x-y scatter-plot focuses on how one variable changes as another changes, regardless of time. 
 
 Figure 6: Corn Planted Acres versus Prices Received by Farmers
 ![](images\acresvsprices.png)
@@ -208,7 +208,7 @@ Producing good graphics is like producing good writing. It is a craft that takes
 
 ## Keys to Good Graphics
 
-The keys to generating good graphics are simple to state, but hard to master in practice. If you let the data tell its own story you will not seek to distort the graphics or mislead the reader. Also, avoid adding non-neccessary decorations or anything that is not useful in depicting datapoints. 
+The keys to generating good graphics are simple to state, but hard to master in practice. If you let the data tell its own story you will not seek to distort the graphics or mislead the reader. Also, avoid adding non-necessary decorations or anything that is not useful in depicting data-points. You should view your graphic as both a tool to held your reader understand your analysis and findings, but it should also serve as a conduit to get the reader who would otherwise skim your report committed to reading it. 
 
 > ## Keys to Good Graphics Summarized
 1. Know your audience
@@ -217,14 +217,19 @@ The keys to generating good graphics are simple to state, but hard to master in 
 4. Avoid distortions
 5. Use common scales in multiple comparisons
 6. Avoid distractions like: Elaborate shadings, grids, decoration, unneccessary axes, three dimensional perspective
+7. Keep in mind weather your reader will be reading your graphics in color or black and white. 
+8. Make your graphic understandable as a stand alone item
 
 
 ## Stand-Alone Requirements
 
+The last key point deserves a bit more discussion. At the very minimum, your graphic should be able to be read and understood in its own right. If someone needs to read your report to understand what is being displayed there is something missing, or a lot of things missing from your graphic. In almost all cases a clear legend and a footnote with details should be provided. 
+
+Clearly indicate the variables graphed on the horizontal and vertical axes and their respective units; provide a short but descriptive title; indicate the sources of the data displayed; use clear and modest type, avoid mnemonics and abbreviations.
 
 
 # Examples of Improving the Graphical Presentation
 
-do a graph evolution here.
+
 
 
