--- a/manuscript/lecture8.Rmd
+++ b/manuscript/lecture8.Rmd
@@ -1,12 +1,7 @@
 ---
-title: 'Chapter 7: Forecasting Use of Corn in the WASDE Balance Sheet'
-csl: american-journal-of-agricultural-economics.csl.txt
-output:
-  html_document:
-    fig_caption: yes
-    toc: yes
-  word_document: default
-bibliography: PriceAnalysis.bib
+title: "ACE 427 Commodity Price Analysis and Forecasting"
+output: slidy_presentation
+theme: uulm
 ---
 
 # Introduction 
@@ -27,12 +22,15 @@ Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains
 
 Figure 1 shows a dramatic uptrend in the Food, Alcohol and Industrial use category. This is due to the dramatic increase in the production of ethanol starting around 2005/2006 and plateauing around 2010 when U.S. ethanol consumption roughly hit the 'blend-wall' where ethanol makes up 10% of the retail gasoline supply. 
 
+# Corn Food, Alcohol, and Industrial Use
+
 ![Figure 2: Corn Food, Alchohol, and Industrial Use, Annual 1990-2015 as a percentage of production](FeedGrains_Corn_files\image013.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
 Figure 2 shows the same data, but the quarterly figures are aggregated to the marketing year total. In both figures 1 and 2 the rationing effects of high prices that occured as a result of the drought in 2012. 
 
+# Corn Food, Alcohol, and Industrial Use
 
 ![Figure 3: Corn Food, Alchohol, and Industrial Use, Annual 1990-2015 as a percentage of production](FeedGrains_Corn_files\image014.png)
 
@@ -48,6 +46,8 @@ Quarterly corn exports are displayed in figure 4. Unlide Food, alcohol and indus
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
+# Corn Exports
+
 Displaying the same data in Figure 5, but aggreateing to an annual frequency, we see the marketing seasonality smoothed away. 
 
 ![Figure 5: Corn Exports, Annual 1990-2015](FeedGrains_Corn_files\image025.png)
@@ -56,12 +56,13 @@ Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains
 
 On average, it appears that exports follow a contstant trendline with variation around the mean produced by years of surplus or scarcity. The drought year 2012, for example is clearly visible as an exceedingly low export year. 
 
+# Corn Exports
+
 In figure 6 we display annual corn exports as a percentage of corn production. 
 
 ![Figure 6: Corn Exports, Annual 1990-2015 as a percentage of corn production](FeedGrains_Corn_files\image024.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
-
 
 When exports are viewed as a proportion of production, we see a pronounced downward trend. This is due to the increasing share of production allocated to the Food, seed, and Industrial category visible in figure 3. Recall that this category is comprised mainly of corn as feedstock for ethanol produciton.
 
@@ -71,7 +72,10 @@ The year-to-year variation is caused by price fluctuations with low prices encou
 
 The final use category is the most difficult to forecast because its quantity is derived, not estimated. What I mean is the USDA makes estimates of every other row in the balance sheet. Then, to ensure the numbers add up, they infer the Feed and Residual category. 
 
- $Feed\&Residual = Production + Imports + Beginning Stocks + Ending Stocks - FoodSeed\&Industrial - Exports$
+ $Feed\&Residual = Production + Imports + Beginning Stocks + Ending Stocks \\
+ - FoodSeed\&Industrial - Exports$
+
+# Feed, and Residual
 
 Since each category on the right hand side is itself estimated with some error, the error for the Feed and Residual category is the sum of the errors of the other categories. 
 
@@ -80,6 +84,8 @@ Feed\&Residual = (Production + \epsilon_{prod}) + (Imports + \epsilon_{import}) 
 + (Ending Stocks + \epsilon_{EStocks}) - (FoodSeed\&Industrial + \epsilon_{Food}) - (Exports + \epsilon_{Export})
 \end{align}$
 
+# Feed, and Residual
+
 Figure 7 below displays the Feed and Residual category since 1990. 
 
 ![Figure 7: Feed and Residual Use, Quarterly 1990-2015](FeedGrains_Corn_files\image027.png)
@@ -87,6 +93,8 @@ Figure 7 below displays the Feed and Residual category since 1990.
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
 Unlike Exports which saw its biggest quarter of use in the second quarter of the marketing year (beginning in December), the biggest quarter of use in the Feed and Residual category is the first (beginning in September). This is because at the end of summer ranchers 'brign cattle home from grass' and they begin eating grain and hay instead of green grass on pasture. This is also when calves born in the spring begin to be 'fattened' for slaughter. 
+
+# Feed, and Residual
 
 Figure 8: shows the Feed and Residual category annually and figure 9 shows the category annually as a percent of production. 
 
@@ -104,11 +112,11 @@ Figure 8 shows that the category has remained roughly constant over the time-per
 
 Examining annual figures as a percentage of production reveals some interesting facts about the price sensitivity of the three use categories. 
 
-The least price sensitive category seems to be Food, Seed, and Industrial. This should be intuitive because this category is composed primarily of corn for feedstock in ethanol production. Since ethanol consumption is effectively mandated at a certain level by the Renewable Fuels Standard, users (gasoline blenders) must purchase a certain amount of ethanol to blend into the retail gasoline supply. This implies a significant portion of the corn crop that will be used regardless of the price. 
+1. The least price sensitive category seems to be Food, Seed, and Industrial. This should be intuitive because this category is composed primarily of corn for feedstock in ethanol production. Since ethanol consumption is effectively mandated at a certain level by the Renewable Fuels Standard, users (gasoline blenders) must purchase a certain amount of ethanol to blend into the retail gasoline supply. This implies a significant portion of the corn crop that will be used regardless of the price. 
 
-The second category is Feed and Residual. Although year-to-year variation can come about due to price responsiveness of the U.S. livestock industry, this variation tends to be overwhelmed by the variation due to the aggregate forecast errors in the other categories. 
+2. The second category is Feed and Residual. Although year-to-year variation can come about due to price responsiveness of the U.S. livestock industry, this variation tends to be overwhelmed by the variation due to the aggregate forecast errors in the other categories. 
 
-The most price sensitive category is Exports, which is readily visible in figure 5 and 6. Foreign buyers of corn can substitute to purchase their corn from other parts of the world like (Argentina comes first to mind). Also, consumers of meat (exported corn is primariliy used as animal feed in the foreign country) in the less developed world are more price sensitive and presumably reduce consumption when prices are high. 
+3. The most price sensitive category is Exports, which is readily visible in figure 5 and 6. Foreign buyers of corn can substitute to purchase their corn from other parts of the world like (Argentina comes first to mind). Also, consumers of meat (exported corn is primariliy used as animal feed in the foreign country) in the less developed world are more price sensitive and presumably reduce consumption when prices are high. 
 
 # Forecasting Use Categories During the Marketing Year - Pace of Use Approach
 
@@ -128,11 +136,6 @@ FAS reports weekly export sales
 
 
 Newton, J. "Reviewing the Pace of Corn and Soybean Exports." farmdoc daily (5):14, Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign, January 26, 2015.
-
-
-
-
-
 
 
 
