--- a/manuscript/lecture8.Rmd
+++ b/manuscript/lecture8.Rmd
@@ -120,22 +120,135 @@ Examining annual figures as a percentage of production reveals some interesting 
 
 # Forecasting Use Categories During the Marketing Year - Pace of Use Approach
 
-One method for forecasting the use categories during the marketing year, is to keep track of how much corn has been used to date in each category. This pace of use can be compared to the pace of use in previous years.
+- One method for forecasting the use categories during the marketing year, is to keep track of how much corn has been used to date in each category. 
+- This pace of use can be compared to the pace of use in previous years. 
+- Alternatively, the pace of use can be expressed as a percent of the WASDE forecast use. 
+- Ideally this percent of WASDE forecast use would be compared to historical percent of WASDE forecast use. 
+- The idea behind such an exercise being the seasonality we saw in the historical graphs above is likely to repeat itself.  
+- Information about the pace of use in each category must be obtained from different sources within the USDA. 
 
-USDA GIPSA maintains annual totals of export sales brokend down by destination. 
+# Food, Seed, and Industrial
 
-[USDA Grain Inspection, Packers, and Stockyards Administration](http://www.gipsa.usda.gov/fgis/exportgrain/default.aspx)
+We discussed above that ethanol production is the primary user of corn in the Food, Seed, and Industrial Category. This becomes obvious by comparing figure 10 below, which displays ethanol production and consumption over time, with figure 1 above. 
 
-FAS reports weekly export sales
+![Figure 10: Annual Fuel Ethanol Production and Consumption 1990-2015](images\Ethanolchart.png)
 
-[Export Sales Reporting](http://apps.fas.usda.gov/export-sales/esrd1.html)
+Source: Figure 10 was downloaded directly from the [EIA](http://www.eia.gov/totalenergy/data/monthly/#renewable) website. Click the link for access to the raw data. 
 
-# External Readings 
+# Food, Seed, and Industrial
+
+- Ethanol production and consumption begin to increase rapidly around 2005, which is when the Energy Policy Act of 2005 and later the Energy Security and Independence Act of 2007 created the Renewable Fuels Standard (RFS). 
+- The RFS mandated quantities of ethanol that blenders of gasoline are required to blend into the retail gasoline supply. 
+- These annual mandates are revised every year, but they were designed to steadily increase year after year until 2015 when the mandate reached 15 billion gallons per year. 
+- This figure came about because gasoline consumption in the United States was forecast to reach 150 billion gallons per year by 2015. So the RFS mandates were designed to reach the point where the entire retail gasoline supply would include 10% ethanol. 
+- Incidentally, 300,000,000 barrels indicated in Figure 10 corresponds to 15 billion gallons (300,000,000*50gallons/barrel = 15,000,000,000 gallons). The orange line shows that blenders of gasoline have been blending greater than 15 billion gallons of ethanol since 2010. 
+
+# Food, Seed, and Industrial
+
+- Going forward, without significant growth in the consumption of gasoline in the United States, this corn use category is likely to remain flat fore the foreseeable future. 
+- Even so, ethanol blenders sometimes experience an ethanol-to-gasoline price ratio that is favorable to blending ethanol even above the levels of the RFS mandate. 
+- So conducting a pace-of-use analysis for this corn use category makes sense as well. Data on monthly fuel ethanol production can be found at [EIA.GOV](http://www.eia.gov/totalenergy/data/monthly/#renewable). 
+- Examining the current marketing year's production of ethanol gives some indication of whether ethanol production is likely to exceed the 15 billion gallon per year mandated level. 
+
+# Exports 
+
+Two USDA agencies are involved in providing estimates of export sales. The [USDA Foreign Agricultural Service](http://www.fas.usda.gov/) and the [USDA Grain Inspection, Packers, and Stockyards Administration](http://www.gipsa.usda.gov/). 
+
+# Exports 
+
+## USDA FAS Export Sales Reporting System
+
+The [USDA Foreign Agricultural Service](http://www.fas.usda.gov/) maintains the Export Sales Reporting System, which reports weekly export quantities and daily reports of large export sales. From the FAS website: 
+
+> USDA's export sales reporting system has its roots in the unexpected purchase of large amounts of grain by the Soviet Union in 1972. The huge, unanticipated Soviet purchases of U.S. wheat and corn that year produced a sizable run-up in U.S. food prices and depleted U.S. reserve stocks. There was also concern over the advantage which large grain companies gained in this situation because they had more information than was available to the public on future prices and grain trade trends.
+>
+> To make sure that all parties involved in the production and export of U.S. grain have access to up-to-date export information, the U.S. Congress mandated an export sales reporting requirement in 1973. Prior to the establishment of the export reporting system, it was impossible for the public to obtain information on exports until such exports were actually shipped. This frequently resulted in a considerable delay in obtaining information. 
+>
+
+# Exports 
+
+## USDA FAS Export Sales Reporting System - Daily Reports
+
+- Under the export sales reporting system, U.S. exporters are required to report all large sales of certain designated commodities by 3 p.m. (Eastern time) on the next business day after the sale is made. 
+- The designated commodities for these daily reports are wheat (by class), barley, corn, grain sorghum, oats, soybeans, soybean cake and meal, and soybean oil. 
+- Large sales for all reportable commodities except soybean oil are defined as 100,000 metric tons or more of one commodity in one day to a single destination or 200,000 tons or more of one commodity during the weekly reporting period. 
+- Large sales for soybean oil are 20,000 tons and 40,000 tons, respectively.
+
+# Exports
+
+## USDA FAS Export Sales Reporting System - Weekly Reports
+- Weekly reports are also required, regardless of the size of the sales transaction, for all of these commodities, as well as wheat products, rye, flaxseed, linseed oil, cotton (by staple length), cottonseed, cottonseed cake and meal, cottonseed oil, rice (by class), and cattle hides and skins (cattle, calf, and kip), and beef. 
+- The reporting week for the export sales reporting system is Friday-Thursday. 
+- The Secretary of Agriculture has the authority to add other commodities to this list. 
+
+Source: [USDA FAS](http://apps.fas.usda.gov/export-sales/backgrnd.htm#Daily Reports)
+
+#Exports
+## GIPSA
+
+USDA GIPSA mission is "To facilitate the marketing of livestock, poultry, meat, cereals, oil-seeds, and related agricultural products, and promote fair and competitive trading practices for the overall benefit of consumers and American agriculture." From the GIPSA website: 
+
+> ### History 
+>The Grain Inspection, Packers and Stockyards Administration (GIPSA) was established in 1994 as part of the reorganization of the U.S. Department of Agriculture. The formation of the agency resulted from the joining of two previously independent agencies: the Federal Grain Inspection Service and the Packers and Stockyards Administration. Today, GIPSA is part of USDA's Marketing and Regulatory Programs, which are working to ensure a productive and competitive global marketplace for U.S. agricultural products.
+
+#Exports
+## GIPSA
+> The Federal Grain Inspection Service (FGIS) was established by Congress in 1976 to manage the national grain inspection system, which initially was established in 1916, and to institute a national grain weighing program. The goal of creating a single Federal grain inspection entity was to ensure development and maintenance of uniform U.S. standards, to develop inspection and weighing procedures for grain in domestic and export trade, and to facilitate grain marketing.
+>
+>Today's Packers and Stockyards Program (P&S) is the progeny of the Packers and Stockyards Administration, which was established in 1921 under the Packers and Stockyards Act. The organization was instituted to regulate livestock marketing activities at public stockyards and the operations of meat packers and live poultry dealers. Source: [USDA GIPSA](http://www.gipsa.usda.gov/about/mission.aspx)
+
+# Exports
+## GIPSA
+
+- The GIPSA's main objective is to maintain standards in quality grading and weighing, but as a by-product of their reporting they also produce [useful statistics](http://www.gipsa.usda.gov/fgis/public_reports.aspx) on export shipments. 
+- Monthly data on grains inspected and weighed for export by (U.S. region) and destination country is available. 
+- Annual reports are also available. 
+
+# Exports
+- Since the FAS and the GIPSA come about their export totals through different processes, they will occasionally differ in their summary estimates. 
+- They have a memorandum of understanding with one another that differences will be reconciled so that the export totals reported by each agency will not differ substantially. 
+
+# Feed and Residual
+
+- While the Residual component tends to dominate the variation in the Feed and Residual category, the USDA does publish statistics related to numbers of cattle, hogs, and poultry. 
+- Major changes in livestock numbers produce a detectable impact in the Feed and Residual use category, to it is worthwhile knowing where to find these estimates. 
+
+- The USDA releases a monthly [Cattle on Feed](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1020) report. Tracking this report gives a sence of trends in beef cattle herd size and production. 
+- Similarly, the [Hogs and Pigs](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1086) report is released quarterly and provides inventory estimates. 
+- The [Poultry Slaughter](https://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1131) report contains the number of head and live weight of chickens, turkeys, ducks and other poultry slaughtered under Federal inspection.    
+
+# Readings 
 
 [Reviewing the Pace of Corn and Soybean Exports](http://farmdocdaily.illinois.edu/2015/01/reviewing-pace-of-corn-and-soybean-exports.html)
 
 
 Newton, J. "Reviewing the Pace of Corn and Soybean Exports." farmdoc daily (5):14, Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign, January 26, 2015.
+
+
+# Exercises
+
+1. Compare this corn's pace of use this year by week to the average of the last five year's pace of use by week. 
+    a. Download the last five years of the [Federal Grain Inspection Services Yearly Export Grain Totals](http://www.gipsa.usda.gov/fgis/exportgrain/default.aspx). 
+    b. Generate one pivot table per year to sum export totals by week. 
+    c. Use the pivot tables you generated in part (b) to make a table of weekly export totals per year for this year and the last five years.
+    d. Create a column in the table you produced from (c) that displays weekly percents of the five year average of export totals. 
+    e. Place or create the table from (d) according to the following format in a separate worksheet from your other pivot table calculations.
+    
+    | Weeks | 2015 % of 5 Yr Ave | 2015 | 2014 | 2013 | 2012 | 2011 | 2010 | 
+    |:------|:-------------------|:-----|:-----|:-----|:-----|:-----|:-----|
+    | 1     |                    |      |      |      |      |      |      |     
+    | 2     |                    |      |      |      |      |      |      | 
+    |       |                    |      |      |      |      |      |      |  
+    |       |                    |      |      |      |      |      |      |
+    | 52    |                    |      |      |      |      |      |      |
+
+
+
+
+
+
+
+
 
 
 
