--- a/manuscript/lecture9.Rmd
+++ b/manuscript/lecture9.Rmd
@@ -1,12 +1,7 @@
 ---
-title: 'Chapter 8: Forecasting Use of Soybeans in the WASDE Balance Sheet'
-csl: american-journal-of-agricultural-economics.csl.txt
-output:
-  html_document:
-    fig_caption: yes
-    toc: yes
-  word_document: default
-bibliography: PriceAnalysis.bib
+title: "ACE 427 Commodity Price Analysis and Forecasting"
+output: slidy_presentation
+theme: uulm
 ---
 
 # Introduction 
