--- a/manuscript/PriceAnalysis.bib
+++ b/manuscript/PriceAnalysis.bib
@@ -54,3 +54,10 @@ publisher={CreateSpace Independent Publishing Platform}
   year={1976},
   publisher={JSTOR}
 }
+
+@techreport{westcott1999price,
+  title={Price determination for corn and wheat: the role of market factors and government programs},
+  author={Westcott, Paul C and Hoffman, Linwood A},
+  year={1999},
+  institution={United States Department of Agriculture, Economic Research Service}
+}
